--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hello OpenCV.js</title>
+<title>Pair</title>
+<script src="opencv.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
-<h2>Hello OpenCV.js</h2>
+<h2>CV Sandbox</h2>
 <p id="status">OpenCV.js is loading...</p>
 <div>
   <div class="inputoutput">
@@ -17,21 +19,5 @@
     <div class="caption">canvasOutput</div>
   </div>
 </div>
-<script type="text/javascript">
-let imgElement = document.getElementById('imageSrc');
-let inputElement = document.getElementById('fileInput');
-inputElement.addEventListener('change', (e) => {
-  imgElement.src = URL.createObjectURL(e.target.files[0]);
-}, false);
-imgElement.onload = function() {
-  let mat = cv.imread(imgElement);
-  cv.imshow('canvasOutput', mat);
-  mat.delete();
-};
-function onOpenCvReady() {
-  document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
-}
-</script>
-<script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
 </body>
 </html>
