--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -1,1 +1,14 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+<title>Pair</title>
+<!-- Load the Paper.js library -->
+<script type="text/javascript" src="paper-full.min.js"></script>
+<!-- Load external PaperScript and associate it with myCanvas -->
+<script type="text/javascript" src="main.js" canvas="mainCanvas">
+</script>
+</head>
+<body>
+    <canvas id="mainCanvas" resize></canvas>
+</body>
+</html>
