some stuff in html

--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 <title>Pair</title>
-<!-- Load the Paper.js library -->
-<script type="text/javascript" src="paper-full.min.js"></script>
-<!-- Load external PaperScript and associate it with myCanvas -->
-<script type="text/javascript" src="main.js" canvas="mainCanvas">
+<script type="text/javascript" src="paper-full.js"></script>
+<script type="text/javascript" src="main.js" canvas="main-canvas">
 </script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="mainCanvas" resize></canvas>
-</body>
+    <canvas id="main-canvas" resize></canvas>
 </html>
