--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Pair</title>
 <script type="text/javascript" src="paper-full.js"></script>
+<script type="text/javascript" src="perspective-transform.js"></script>
 <script type="text/javascript" src="main.js" canvas="main-canvas">
 </script>
 <link rel="stylesheet" href="style.css">
