wishful thinking code snippet

--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -61,6 +61,9 @@
                     // $toolpathTransformer signature
                 </div>
                 <div class="program-line" id="pl-4">
+                    // $machineSynthesizer gigapan coinGeometry
+                </div>
+                <div class="program-line" id="pl-5">
                     machine.plot(toolpath);
                 </div>
             </div>
