--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -73,4 +73,10 @@
             </div>
         </div>
     </div>
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+</body>
 </html>
