--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Pair</title>
-<script type="text/javascript" src="paper-full.js"></script>
-<script type="text/javascript" src="perspective-transform.js"></script>
+<script type="text/javascript" src="lib/paper-full.js"></script>
+<script type="text/javascript" src="lib/perspective-transform.js"></script>
 <script type="module" src="main.js" canvas="main-canvas">
 </script>
 <link rel="stylesheet" href="style.css">
