load react via local library rather than by CDN

--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -4,6 +4,8 @@
 <title>Pair</title>
 <script type="text/javascript" src="lib/paper-full.js"></script>
 <script type="text/javascript" src="lib/perspective-transform.js"></script>
+<script type="text/javascript" src="lib/react.development.js" crossorigin></script>
+<script type="text/javascript" src="lib/react-dom.development.js" crossorigin></script>
 <script type="module" src="main.js" canvas="main-canvas">
 </script>
 <link rel="stylesheet" href="style.css">
@@ -15,10 +17,5 @@
         </div>
         <div id="program-container"></div>
     </div>
-
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 </body>
 </html>
