loading from ui-root.tsx working

--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -7,15 +7,12 @@
 <script type="text/javascript" src="lib/react.development.js" crossorigin></script>
 <script type="text/javascript" src="lib/react-dom.development.js" crossorigin></script>
 <script type="module" src="main.js" canvas="main-canvas">
+
 </script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main-container">
-        <div id="canvas-container">
-            <canvas id="main-canvas" resize></canvas>
-        </div>
-        <div id="program-container"></div>
+    <div id="root">
     </div>
 </body>
 </html>
