--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -6,10 +6,13 @@
 <script type="text/javascript" src="lib/perspective-transform.js"></script>
 <script type="text/javascript" src="lib/react.development.js" crossorigin></script>
 <script type="text/javascript" src="lib/react-dom.development.js" crossorigin></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 <script type="module" src="main.js" canvas="main-canvas">
 
 </script>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet"
+href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/monokai-sublime.min.css">
 </head>
 <body>
     <div id="root">
