--- a/light_space/client/index.html
+++ b/light_space/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pair</title>
+<title>Verso</title>
 <script type="text/javascript" src="lib/paper-full.js"></script>
 <script type="text/javascript" src="lib/perspective-transform.js"></script>
 <script type="text/javascript" src="lib/react.development.js" crossorigin></script>
