more three.js dependencies

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Verso</title>
 <script type="text/javascript" src="lib/paper-full.js"></script>
+<script type="text/javascript" src="lib/three.module.js"></script>
 <script type="text/javascript" src="lib/perspective-transform.js"></script>
 <script type="text/javascript" src="lib/react.development.js" crossorigin></script>
 <script type="text/javascript" src="lib/react-dom.development.js" crossorigin></script>
